--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,28 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: postgresql
+  encoding: utf8
+  database: notes
+  pool: 5
+  username: lionheart
+  password: 123
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: notes
+  pool: 5
+  username: lionheart
+  password: 123
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+url: postgresql://notes:fearfear@localhost:5432/notes-test
 
 production:
   <<: *default
