--- a/config/database.yml
+++ b/config/database.yml
@@ -6,12 +6,11 @@
 #
 default: &default
   adapter: postgresql
-  encoding: utf8
-  database: notes
-  pool: 5
-  username: lionheart
-  password: 123
-
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  
 development:
   adapter: postgresql
   encoding: utf8
