--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
-  "manifest_version": 2,
-  "name": "Notes",
-  "version": "1.1",
-  "description": "Notes is available to you everywhere, always in sync and free of complexity",
-  "permissions": ["activeTab", "tabs", "contextMenus", "cookies", "*://notes-app-w.herokuapp.com/*", "http://localhost/*"],
+  "manifest_version": 3,
+  "name": "Simple as F**k Notes",
+  "version": "2.0",
+  "description": "Simple as F**k Notes is available to you everywhere thanks to Chrome sync.",
+  "permissions": ["storage"],
+  "options_page": "options.html",
 "browser_action": {
    "default_icon": "tab-icon.png",
    "default_title": "Notes",
@@ -18,6 +19,6 @@
   
 
  "content_scripts" : [
-  { "matches" : ["http://*/*", "https://*/*", "file://*/*"] , "js" : [ "popup.js" ],"css": ["css_file.css"] }
+  { "matches" : [ "file://*/*"] , "js" : [ "popup.js" ],"css": ["css_file.css"] }
 ]
 }
